--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <meta property="og:title" content="EvanHong99">
 <meta property="og:site_name" content="EvanHong99">
 <meta property="og:url" content="https://evanhong99.github.io/">
-<meta property="og:description" content="">
+<meta property="og:description" content="洪一帆的个人博客">
 
 
 
@@ -40,6 +40,7 @@
 <link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
   
 <!-- GLOBAL MANDATORY STYLES -->
+<!-- 引用库 -->
 <link href="/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css"/>
 <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 <link href="/vendor/animate.css/animate.css" rel="stylesheet">
@@ -161,7 +162,7 @@
                 
                   <li><a title="Linkedin" target="_blank" rel="noopener" href="https://www.linkedin.com/in/%E4%B8%80%E5%B8%86-%E6%B4%AA-b19412225" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
 
-                  <li><a title="Email" target="_blank" rel="noopener" href="yifanhong_job@163.com" class="social-icons"><i class="fa-regular fa-envelope" style="color: #ffffff;"></i></a></li>
+                  <li><a title="Email" target="_blank" rel="noopener" href="yifanhong_job@163.com" class="social-icons"><i class="icon-social-dropbox"></i>yifanhong_job@163.com</a></li>
                 
               </ul>
           </div>
